@@ -1,5 +1,6 @@
 [encoding: UTF-8]
 # List of source files which contain translatable strings.
 watray/watraymainwindow.vala
+watray/watrayprojectspanel.vala
 watraysimple/simpleplugin.vala
 watraysimple/simpledocumentmanager.vala
