@@ -21,8 +21,43 @@
  */
 using Gtk;
 
-internal class Watray.ProjectsPanel : Gtk.ScrolledWindow, IProjectsPanel
+internal class Watray.ProjectsPanel : VBox, IProjectsPanel
 {
+	private TreeView projects_view;
 	
+	public ProjectsPanel ()
+	{
+		this.spacing = 5;
+		this.border_width = 5;
+		
+		var hbox = new HBox (false, 5);
+		
+		var icon = new Image.from_stock (STOCK_DIRECTORY, IconSize.MENU);
+		hbox.pack_start (icon, false, false, 0);
+		
+		var label = new Label (_("Projects"));
+		label.set_alignment (0, 0);
+		hbox.pack_start (label, true, true, 0);
+		
+		var close_button = new Button ();
+		close_button.relief = ReliefStyle.NONE;
+		close_button.focus_on_click = false;
+		var style = new RcStyle ();
+		style.xthickness = style.ythickness = 0;
+		close_button.modify_style (style);
+		close_button.add (new Image.from_stock (Gtk.STOCK_CLOSE, IconSize.MENU));
+		close_button.clicked += () => { this.hide (); };
+		hbox.pack_start (close_button, false, false, 0);
+		
+		this.pack_start (hbox, false, false, 0);
+		
+		var scrolled_window = new ScrolledWindow (null, null);
+		projects_view = new TreeView ();
+		scrolled_window.add (projects_view);
+		scrolled_window.set_policy (PolicyType.NEVER, PolicyType.AUTOMATIC);
+		this.pack_start (scrolled_window, true, true, 0);
+		
+		this.show_all ();
+	}
 }
 
