@@ -1,5 +1,16 @@
 2009-01-07  Matias De la Puente  <mfpuente.ar@gmail.com>
 
+	* POTFILES.in:
+	* POTFILES.skip:
+	
+	Added projects panel translation.
+	
+	* es.po:
+	
+	Updated spanish translation.
+	
+2009-01-07  Matias De la Puente  <mfpuente.ar@gmail.com>
+
 	* LINGUAS:
 	* es_AR.po:
 	* es.po:
